# tencentcloud-iot-explorer-ble-adv-sdk-embedded

./: .code.yml  readme.md
cfg/: ble_qiot_adv_cfg.h
data_template/: readme.md
docs/: LLSync ADV SDK接入指引.md  LLSync广播协议说明.docx
hal/: ble_qiot_adv_external.c
include/: ble_qiot_adv_export.h  ble_qiot_adv_import.h
samples/esp32/: readme.md  sdkconfig
samples/esp32/components/qcloud_llsync_adv/: CMakeLists.txt  readme.md
samples/esp32/components/qcloud_llsync_adv/cfg/: ble_qiot_adv_cfg.h
samples/esp32/components/qcloud_llsync_adv/hal/: ble_qiot_adv_external.c
samples/esp32/main/: app_main.c
samples/nrf52832/: main.c  readme.md
samples/nrf52832/pca10040/s132/arm5_no_packs/: ble_app_beacon_pca10040_s132.uvoptx  ble_app_beacon_pca10040_s132.uvprojx
samples/nrf52832/pca10040/s132/config/: sdk_config.h
samples/nrf52832/qcloud_ble_adv/: readme.md
samples/nrf52832/qcloud_ble_adv/cfg/: ble_qiot_adv_cfg.h
samples/nrf52832/qcloud_ble_adv/hal/: ble_qiot_adv_external.c  flash_storage.c  flash_storage.h
scripts/: example.json  interpret_dt_ble.py  readme.md
sdk_src/internal_inc/: ble_qiot_adv_center.h  ble_qiot_adv_ctrl_pro.h  ble_qiot_aes.h  ble_qiot_common.h  ble_qiot_fifo.h  ble_qiot_log.h  ble_qiot_md5.h  ble_qiot_param_check.h
sdk_src/src/: ble_qiot_adv_center.c  ble_qiot_adv_ctrl.c  ble_qiot_adv_property.c
sdk_src/utils/: ble_qiot_aes.c  ble_qiot_fifo.c  ble_qiot_utils_data.c  ble_qiot_utils_log.c  ble_qiot_utils_md5.c
